objects/Proactive_Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Attendance_Date__c</fullName>
        <description>Attendance Date</description>
        <inlineHelpText>Attendance Date</inlineHelpText>
        <label>Attendance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attendance_Status__c</fullName>
        <description>Attendance Status</description>
        <label>Attendance Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Type__c</fullName>
        <description>Attendance Type --&gt; Value exist as a picklist in related objects</description>
        <label>Attendance Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Student First Name</description>
        <inlineHelpText>Student First Name</inlineHelpText>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Student Last Name</description>
        <inlineHelpText>Student Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USI_ID__c</fullName>
        <label>USI_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Proactive Attendance</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proactive Attendance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>